--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
             <h3>YouTube</h3>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=4LHwn48nrzg">OpenDolphin クラウド ZERO</a></li>
-                <li><a href="https://www.youtube.com/watch?v=C2DZVdDbOvE">馬車道慶友クリニック様</a></li>
-                <li><a href="https://www.youtube.com/watch?v=CiAbArC1BkI">Super EHRTouch</a></li>
+                <li><a href="https://www.youtube.com/watch?v=C2DZVdDbOvE">馬車道慶友クリニック 古梶先生</a></li>
+                <li><a href="https://www.youtube.com/watch?v=u_k7SFgsFrs">医療法人清陽会 前田先生</a></li>
+                <li><a href="https://www.youtube.com/watch?v=CiAbArC1BkI">Super EHRTouch</a>（iPadアプリ）</li>
             </ul>
 
             <h3>プロフィール</h3>
