--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     </head>
     <body>
+      <div id="fb-root"></div>
         <section class="page-header">
             <h2 class="project-name">オープン ドルフィン</h2>
             <h3 class="project-tagline">医療・クラウド・オープンソース</h3>
-            <!--
             <a href="https://github.com/dolphin-dev/OpenDolphin" class="btn">ソースコード</a>
             <a href="https://github.com/dolphin-dev/docker-images" class="btn">インストール</a>
-            <a href="https://github.com/jasonlong/geo_pattern/tarball/master" class="btn">設 計</a>
-          -->
+            <a href="https://gist.github.com/dolphin-dev/3cc1d4579ce268809573" class="btn">設 計</a>
         </section>
 
         <section class="main-content">
-
             <p>OpenDolphinはオープンソースの電子カルテです。Windows、Mac、Linux で動き、日医標準レセプトORCAと連携します。またiPhone/iPad アプリもあります。</p>
-
             <h3>ファクト</h3>
             <ul>
                 <li>札幌市元町皮ふ科、松村先生の先進的拡張　<a href="http://opendolphin.motomachi-hifuka.jp">オープンドルフィン日記</a></li>
@@ -34,6 +31,7 @@
                 <li>高東ソフトウェアサービス様　<a href="http://www.koutou-software.net/junk/install-opendolphin-2.5.12-2015-01-15.html">OpenDolphinの開発環境、サーバーをWindowsで構築する</a>
             </ul>
 
+            <!--
             <h3>ソースコード</h3>
             <ul>
                 <li><a href="https://github.com/dolphin-dev/OpenDolphin">最新版 Ver.2.6.0（2015-08-08）</a></li>
@@ -45,12 +43,14 @@
                 <li><a href="https://github.com/dolphin-dev/docker-images">Version 2.6.0+WildFly 9（Dockerイメージでコンパイル不要）</a></li>
                 <li><a href="https://gist.github.com/dolphin-dev/c75e4ca63689779bfdf7">ORCAとの接続</a></li>
             </ul>
+            -->
 
             <h3>Gist</h3>
             <ul>
                 <li><a href="https://gist.github.com/dolphin-dev/77d867dbf29369bdde79">Simpleは結果である</a></li>
                 <li><a href="https://gist.github.com/dolphin-dev/c0d59774ecfbe47c0b3b">確定日について</a></li>
-                <li><a href="https://gist.github.com/dolphin-dev/3cc1d4579ce268809573">設 計</a></li>
+                <li><a href="https://gist.github.com/dolphin-dev/c75e4ca63689779bfdf7">ORCAとの接続</a></li>
+                <!-- li><a href="https://gist.github.com/dolphin-dev/3cc1d4579ce268809573">設 計</a></li -->
                 <li><a href="OpenDolphin-Lab-A4.pdf">オープンソースとの関係</a>（PDF）</li>
                 <li><a href="http://www.slideshare.net/kazushiminagawa/opendolphin?qid=f30b8dea-76dc-48dd-b17e-2283944838af&v=qf1&b=&from_search=1">OpenDolphin 海を渡る</a>（SlideShare）</li>
             </ul>
