added the cost info.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     </head>
     <body>
-      <div id="fb-root"></div>
         <section class="page-header">
             <h2 class="project-name">オープン ドルフィン</h2>
             <h3 class="project-tagline">医療・クラウド・オープンソース</h3>
             <a href="https://github.com/dolphin-dev/OpenDolphin" class="btn">ソースコード</a>
             <a href="https://github.com/dolphin-dev/docker-images" class="btn">インストール</a>
-            <a href="https://gist.github.com/dolphin-dev/3cc1d4579ce268809573" class="btn">設 計</a>
+            <a href="https://gist.github.com/dolphin-dev/3cc1d4579ce268809573" class="btn">設　計</a>
         </section>
 
         <section class="main-content">
@@ -57,14 +56,16 @@
 
             <h3>商用サポート</h3>
             <ul>
-                <li>院内サーバー自己構築用の資料提供</li>
-                <li>クライアントのみ自己導入&amp;従量課金制　OpenDolphin クラウド ZERO</li>
-                <li>導入一式+月額固定制のフルサポート</li>
-                <li>OEM 共同開発</li>
-                <li>Osirix、各社PACSシステムとの連携</li>
-                <li>検査オーダー、在宅医療支援システムとの連携</li>
-                <li>iOSアプリ3種</li>
-                <li>各地でセミナー開催、販売代理店様の数 全国に27</li>
+                <li>院内サーバー自己構築用の資料提供（¥200,000/年）</li>
+                <li>クライアントのみ自己導入&amp;従量課金制（OpenDolphin クラウド ZERO ¥50/カルテ）</li>
+                <li>導入一式 + 月額固定制のフルサポート（¥36,000/月）</li>
+                <li>OEM &amp; 共同開発</li>
+                <li>Osirix | Xronos | 各社PACSシステムとの連携</li>
+                <li>検査オーダーシステムとの連携</li>
+                <li>在宅医療支援システムとの連携</li>
+                <li>iOSアプリ3種（DolphinPro | VisitTouch | Super EHRTouch）</li>
+                <li>各地でセミナー開催</li>
+                <li>販売代理店様の数 全国に27</li>
             </ul>
 
             <p>詳細については<a href="http://www.lscc.co.jp/product/opendolphinpro.html">ライフサイエンスコンピューティング（株）</a>へお問い合わせください。</p>
@@ -73,10 +74,10 @@
             <ul>
                 <li>SSO（Single Sign On）基盤での認証</li>
                 <li>ポータルサイトからの起動</li>
-                <li>NTTオンデマンドVPN網とのデータセンター間接続</li>
+                <li>NTTオンデマンド VPN 網とのデータセンター間接続</li>
                 <li>ASP化</li>
             </ul>
-            <p>上記は 福島県の健康福祉ネットワーク（通称 キビタン健康ネット）で採用されています。</p>
+            <p>上記は <a href="http://www.fukushima-doctors.jp/detail/index_2239.html">福島県の健康福祉ネットワーク（通称 キビタン健康ネット）</a>で採用されています。</p>
 
             <h3>YouTube</h3>
             <ul>
@@ -172,7 +173,6 @@
             </ul>
             <h3>受 付</h3>
             <ul><li>お越しの際は、シルクビル６F   SOHO Yokohama 総合受付へお願いします。</li></ul>
-            <p>　</p>
             <iframe width="640" height="480" style="frameborder:0; scrolling:no; marginheight:0; marginwidth:0;" src="https://maps.google.co.jp/maps?client=safari&amp;oe=UTF-8&amp;q=%E6%A8%AA%E6%B5%9C%E5%B8%82%E4%B8%AD%E5%8C%BA%E5%B1%B1%E4%B8%8B%E7%94%BA%EF%BC%91%E7%95%AA%E5%9C%B0&amp;ie=UTF8&amp;hq=&amp;hnear=%E7%A5%9E%E5%A5%88%E5%B7%9D%E7%9C%8C%E6%A8%AA%E6%B5%9C%E5%B8%82%E4%B8%AD%E5%8C%BA%E5%B1%B1%E4%B8%8B%E7%94%BA%EF%BC%91&amp;gl=jp&amp;ll=35.447538,139.645256&amp;spn=0.008163,0.011094&amp;t=m&amp;z=14&amp;brcurrent=3,0x60185d1cfcd5e259:0xa4b6be60f768202b,0&amp;output=embed"></iframe><br /><small><a href="https://maps.google.co.jp/maps?client=safari&amp;oe=UTF-8&amp;q=%E6%A8%AA%E6%B5%9C%E5%B8%82%E4%B8%AD%E5%8C%BA%E5%B1%B1%E4%B8%8B%E7%94%BA%EF%BC%91%E7%95%AA%E5%9C%B0&amp;ie=UTF8&amp;hq=&amp;hnear=%E7%A5%9E%E5%A5%88%E5%B7%9D%E7%9C%8C%E6%A8%AA%E6%B5%9C%E5%B8%82%E4%B8%AD%E5%8C%BA%E5%B1%B1%E4%B8%8B%E7%94%BA%EF%BC%91&amp;gl=jp&amp;ll=35.447538,139.645256&amp;spn=0.008163,0.011094&amp;t=m&amp;z=14&amp;brcurrent=3,0x60185d1cfcd5e259:0xa4b6be60f768202b,0&amp;source=embed" style="color:#0000FF;text-align:left">大きな地図で見る</a></small>
 
 
