changed the entry order, gist is the top.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
         </section>
 
         <section class="main-content">
+
             <p>OpenDolphinはオープンソースの電子カルテです。Windows、Mac、Linux で動き、日医標準レセプトORCAと連携します。またiPhone/iPad アプリもあります。</p>
+
+            <h3>Gist</h3>
+            <ul>
+                <li><a href="https://gist.github.com/dolphin-dev/77d867dbf29369bdde79">Simpleは結果である</a></li>
+                <li><a href="https://gist.github.com/dolphin-dev/c0d59774ecfbe47c0b3b">確定日について</a></li>
+                <li><a href="https://gist.github.com/dolphin-dev/c75e4ca63689779bfdf7">ORCAとの接続</a></li>
+                <li><a href="https://gist.github.com/dolphin-dev/6461a80c70946d246a5e">VirtualBoxでテスト</a></li>
+                <li><a href="OpenDolphin-Lab-A4.pdf">オープンソースとの関係</a>（PDF）</li>
+                <li><a href="http://www.slideshare.net/kazushiminagawa/opendolphin?qid=f30b8dea-76dc-48dd-b17e-2283944838af&v=qf1&b=&from_search=1">OpenDolphin 海を渡る</a>（SlideShare）</li>
+            </ul>
+
             <h3>ファクト</h3>
             <ul>
                 <li>札幌市元町皮ふ科、松村先生の先進的拡張　<a href="http://opendolphin.motomachi-hifuka.jp">オープンドルフィン日記</a></li>
@@ -28,30 +40,6 @@
                 <li>南さつま市吉井クリニック、當房さまのサーバー構築ガイド　<a href="http://www13.plala.or.jp/opendolphin">OpenDolphinをORCAサーバーに導入する</a></li>
                 <li>新見公立大学様の看護教育システムの一部にカスタマイズされています。<a href="http://www.niimi-c.ac.jp/school/gp_19_1.html">文部科学省現代GP</a></li>
                 <li>高東ソフトウェアサービス様　<a href="http://www.koutou-software.net/junk/install-opendolphin-2.5.12-2015-01-15.html">OpenDolphinの開発環境、サーバーをWindowsで構築する</a>
-            </ul>
-
-            <!--
-            <h3>ソースコード</h3>
-            <ul>
-                <li><a href="https://github.com/dolphin-dev/OpenDolphin">最新版 Ver.2.6.0（2015-08-08）</a></li>
-                <li><a href="https://github.com/dolphin-dev/OpenDolphin/commits/master">過去のリリース</a></li>
-            </ul>
-
-            <h3>インストールガイド</h3>
-            <ul>
-                <li><a href="https://github.com/dolphin-dev/docker-images">Version 2.6.0+WildFly 9（Dockerイメージでコンパイル不要）</a></li>
-                <li><a href="https://gist.github.com/dolphin-dev/c75e4ca63689779bfdf7">ORCAとの接続</a></li>
-            </ul>
-            -->
-
-            <h3>Gist</h3>
-            <ul>
-                <li><a href="https://gist.github.com/dolphin-dev/77d867dbf29369bdde79">Simpleは結果である</a></li>
-                <li><a href="https://gist.github.com/dolphin-dev/c0d59774ecfbe47c0b3b">確定日について</a></li>
-                <li><a href="https://gist.github.com/dolphin-dev/c75e4ca63689779bfdf7">ORCAとの接続</a></li>
-                <!-- li><a href="https://gist.github.com/dolphin-dev/3cc1d4579ce268809573">設 計</a></li -->
-                <li><a href="OpenDolphin-Lab-A4.pdf">オープンソースとの関係</a>（PDF）</li>
-                <li><a href="http://www.slideshare.net/kazushiminagawa/opendolphin?qid=f30b8dea-76dc-48dd-b17e-2283944838af&v=qf1&b=&from_search=1">OpenDolphin 海を渡る</a>（SlideShare）</li>
             </ul>
 
             <h3>商用サポート</h3>
