add comment to the fact-entry

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <li>新見公立大学様の看護教育システムの一部にカスタマイズされています。<a href="http://www.niimi-c.ac.jp/school/gp_19_1.html">文部科学省現代GP</a></li>
                 <li>高東ソフトウェアサービス様　<a href="http://www.koutou-software.net/junk/install-opendolphin-2.5.12-2015-01-15.html">OpenDolphinの開発環境、サーバーをWindowsで構築する</a>
             </ul>
+            <p>ファクト欄に記載のOpenDolphinについてはそれぞれの先生にお問い合わせください。OpenDolphinコミュニティにはコミッターが存在せず、メンバーがそれぞれ独立に開発し、GitHub等でソースを共有しています。</p>
 
             <h3>商用サポート</h3>
             <ul>
