change the fb settings

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>OpenDolphin</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:url"           content="http://dolphin-dev.github.io/index.html" />
         <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
@@ -28,6 +27,7 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
       </script>
+
         <section class="page-header">
             <h2 class="project-name">オープン ドルフィン</h2>
             <h3 class="project-tagline">医療・クラウド・オープンソース</h3>
@@ -40,8 +40,8 @@
           <div
             class="fb-like"
             data-share="true"
-            data-width="450"
-            data-show-faces="true">
+            data-width="90"
+            data-show-faces="false">
           </div>
           <!--
           <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://dolphin-dev.github.io">Tweet</a>
