change sdks language

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) {return;}
         js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js";
+        js.src = "//connect.facebook.net/ja_JP/sdk.js";
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
       </script>
@@ -43,13 +43,13 @@
             data-width="90"
             data-show-faces="false">
           </div>
-        
+
           <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://dolphin-dev.github.io">Tweet</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
             <p>OpenDolphinはオープンソースの電子カルテです。Windows、Mac、Linux で動き、日医標準レセプトORCAと連携します。またiPhone/iPad アプリもあります。</p>
 
-            <h3>Gist</h3>
+            <h3>GitHub Gist</h3>
             <ul>
                 <li><a href="https://gist.github.com/dolphin-dev/77d867dbf29369bdde79">Simpleは結果である</a></li>
                 <li><a href="https://gist.github.com/dolphin-dev/c0d59774ecfbe47c0b3b">確定日について</a></li>
