--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <li>新見公立大学様の看護教育システムの一部にカスタマイズされています。<a href="http://www.niimi-c.ac.jp/school/gp_19_1.html">文部科学省現代GP</a></li>
                 <li>高東ソフトウェアサービス様　<a href="http://www.koutou-software.net/junk/install-opendolphin-2.5.12-2015-01-15.html">OpenDolphinの開発環境、サーバーをWindowsで構築する</a>
             </ul>
-            <p>ファクト欄に記載のOpenDolphinについてはそれぞれの先生にお問い合わせください。OpenDolphinコミュニティにはコミッターが存在せず、メンバーがそれぞれ独立に開発し、GitHub等でソースを共有しています。</p>
+            <p style="padding-left: 1rem;">ファクト欄に記載のOpenDolphinについてはそれぞれの先生にお問い合わせください。OpenDolphinコミュニティにはコミッターが存在せず、GitHub等でソースを共有しています。</p>
 
             <h3>GitHub Gist</h3>
             <ul>
@@ -69,7 +69,7 @@
                 <li><a href="OpenDolphin-Lab-A4.pdf">オープンソースとの関係</a>（PDF）</li>
                 <li><a href="http://www.slideshare.net/kazushiminagawa/opendolphin?qid=f30b8dea-76dc-48dd-b17e-2283944838af&v=qf1&b=&from_search=1">OpenDolphin 海を渡る</a>（SlideShare）</li>
             </ul>
-            
+
             <h3>商用サポート</h3>
             <ul>
                 <li>院内サーバー自己構築用の資料提供（¥200,000/年）</li>
@@ -84,7 +84,7 @@
                 <li>販売代理店様の数 全国に27</li>
             </ul>
 
-            <p>詳細については<a href="http://www.lscc.co.jp/product/opendolphinpro.html">ライフサイエンスコンピューティング（株）</a>へお問い合わせください。</p>
+            <p style="padding-left: 1rem;">詳細については<a href="http://www.lscc.co.jp/product/opendolphinpro.html">ライフサイエンスコンピューティング（株）</a>へお問い合わせください。</p>
 
             <h3>配備対応</h3>
             <ul>
@@ -93,7 +93,7 @@
                 <li>NTTオンデマンド VPN 網とのデータセンター間接続</li>
                 <li>ASP化</li>
             </ul>
-            <p>上記は <a href="http://www.fukushima-doctors.jp/detail/index_2239.html">福島県の健康福祉ネットワーク（通称 キビタン健康ネット）</a>で採用されています。</p>
+            <p style="padding-left: 1rem;">上記は <a href="http://www.fukushima-doctors.jp/detail/index_2239.html">福島県の健康福祉ネットワーク（通称 キビタン健康ネット）</a>で採用されています。</p>
 
             <h3>YouTube</h3>
             <ul>
@@ -121,7 +121,7 @@
                 <li>2013年　オルカとクラウド間接続が完成</li>
                 <li>2014年　10周年記念 OpenDolphin クラウド ZERO（従量課金制）リリース</li>
             </ul>
-            <p>＊報告書に記載の（株）デジタルグローブは2012年12月31日にライフサイエンスコンピューティング（株）と合併し、同社のオープンドルフィンラボとなりました。</p>
+            <p style="padding-left: 1rem;">＊報告書に記載の（株）デジタルグローブは2012年12月31日にライフサイエンスコンピューティング（株）と合併し、同社のオープンドルフィンラボとなりました。</p>
 
             <h3>設計方針</h3>
             <p>弊社ラボはソフトウェアを下記のように大別しています。</p>
@@ -158,7 +158,7 @@
                 <li>iPhone/iPadアプリと連携</li>
                 <li>複数クライアントアクセス時の排他制御</li>
             </ul>
-            <p>＊診療行為、医薬品、機材をセットにした診療綴りに相当するデータでORCAの点数マスタから構成される。よく使用するものをテンプレートとして作成し再利用できる。</p>
+            <p style="padding-left: 1rem;">＊診療行為、医薬品、機材をセットにした診療綴りに相当するデータでORCAの点数マスタから構成される。よく使用するものをテンプレートとして作成し再利用できる。</p>
 
             <!-- script src="https://gist.github.com/dolphin-dev/3cc1d4579ce268809573.js"></script -->
 
