disable fb and tweet

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
     </head>
     <body>
+      <!--
       <script>
       window.fbAsyncInit = function() {
         FB.init({
@@ -27,7 +28,7 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
       </script>
-
+    -->
         <section class="page-header">
             <h2 class="project-name">オープン ドルフィン</h2>
             <h3 class="project-tagline">医療・クラウド・オープンソース</h3>
@@ -37,16 +38,17 @@
         </section>
 
         <section class="main-content">
-          <div
+          <!-- div
             class="fb-like"
             data-share="true"
             data-width="90"
             data-show-faces="false">
-          </div>
+          </div -->>
 
+          <!--
           <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://dolphin-dev.github.io">Tweet</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
+        -->
             <p>OpenDolphinはオープンソースの電子カルテです。Windows、Mac、Linux で動き、日医標準レセプトORCAと連携します。またiPhone/iPad アプリもあります。</p>
 
             <h3>ファクト</h3>
@@ -124,9 +126,9 @@
             <p style="padding-left: 1rem;">＊報告書に記載の（株）デジタルグローブは2012年12月31日にライフサイエンスコンピューティング（株）と合併し、同社のオープンドルフィンラボとなりました。</p>
 
             <h3>設計方針</h3>
-            <p>弊社ラボはソフトウェアを下記のように大別しています。</p>
+            <p>弊社ラボはソフトウェアを下記のように大別しています。</p><p>
                 （１）業務用で伝票入力に適したインターフェイスを持つタイプ<br/>
-                （２）クリエイター用でキャンバスやノートのようなインターフェイスを持つタイプ<br/>
+                （２）クリエイター用でキャンバスやノートのようなインターフェイスを持つタイプ</p>
             <p>電子カルテの場合、診療報酬の会計や部門間連携が必要なため、歴史的に１のタイプで実装されてきました。
             しかしこのタイプは医師のような知的業務を行う人が使用すると、苦しく感じられます。</p>
             <p>
