--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             data-share="true"
             data-width="90"
             data-show-faces="false">
-          </div -->>
+          </div -->
 
           <!--
           <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://dolphin-dev.github.io">Tweet</a>
