--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
             <h3>ファクト</h3>
             <ul>
-                <li>札幌市元町皮ふ科、松村先生の先進的拡張　<a href="http://opendolphin.motomachi-hifuka.jp">オープンドルフィン日記</a></li>
-                <li>和歌山市増田内科、増田先生の先進的拡張　<a href="http://www.masuda-naika.net/openDolphin.html">OpenDolphinのカスタマイズ</a></li>
-                <li>新宿ヒロクリニック、英先生の訪問診療へ特化したカスタマイズ　<a href="http://www.hiro-clinic.com/html/info_os.html">OpenDolphin ToGo</a></li>
-                <li>南さつま市吉井クリニック、當房さまのサーバー構築ガイド　<a href="http://www13.plala.or.jp/opendolphin">OpenDolphinをORCAサーバーに導入する</a></li>
+                <li>札幌市元町皮ふ科 松村先生の先進的拡張　<a href="http://opendolphin.motomachi-hifuka.jp">オープンドルフィン日記</a></li>
+                <li>和歌山市増田内科 増田先生の先進的拡張　<a href="http://www.masuda-naika.net/openDolphin.html">OpenDolphinのカスタマイズ</a></li>
+                <li>新宿ヒロクリニック 英先生の訪問診療へ特化したカスタマイズ　<a href="http://www.hiro-clinic.com/html/info_os.html">OpenDolphin ToGo</a></li>
+                <li>南さつま市吉井クリニック 當房さまのサーバー構築ガイド　<a href="http://www13.plala.or.jp/opendolphin">OpenDolphinをORCAサーバーに導入する</a></li>
                 <li>新見公立大学様の看護教育システムの一部にカスタマイズされています。<a href="http://www.niimi-c.ac.jp/school/gp_19_1.html">文部科学省現代GP</a></li>
                 <li>高東ソフトウェアサービス様　<a href="http://www.koutou-software.net/junk/install-opendolphin-2.5.12-2015-01-15.html">OpenDolphinの開発環境、サーバーをWindowsで構築する</a>
             </ul>
@@ -101,7 +101,7 @@
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=4LHwn48nrzg">OpenDolphin クラウド ZERO</a></li>
                 <li><a href="https://www.youtube.com/watch?v=C2DZVdDbOvE">馬車道慶友クリニック 古梶先生</a></li>
-                <li><a href="https://www.youtube.com/watch?v=u_k7SFgsFrs">医療法人清陽会 前田先生</a></li>
+                <li><a href="https://www.youtube.com/watch?v=u_k7SFgsFrs">医療法人社団 清陽会 前田先生</a></li>
                 <li><a href="https://www.youtube.com/watch?v=CiAbArC1BkI">Super EHRTouch</a>（iPadアプリ）</li>
             </ul>
 
@@ -129,13 +129,13 @@
             <p>弊社ラボはソフトウェアを下記のように大別しています。</p><p>
                 （１）業務用で伝票入力に適したインターフェイスを持つタイプ<br/>
                 （２）クリエイター用でキャンバスやノートのようなインターフェイスを持つタイプ</p>
-            <p>電子カルテの場合、診療報酬の会計や部門間連携が必要なため、歴史的に１のタイプで実装されてきました。
-            しかしこのタイプは医師のような知的業務を行う人が使用すると、苦しく感じられます。</p>
+            <p>電子カルテの場合、診療報酬の会計や部門間連携が必要なため歴史的に１のタイプで実装されてきました。
+            しかしこのタイプは、医師のような知的業務を行う人が使用すると苦しく感じられます。</p>
             <p>
                 一方２のタイプは、入力フォームがないので思考に集中できる、読み返す時に視認性がよい、と言われます。
             </p>
             <p>
-                そこでOpenDolphinはクリエイティブ型インターフェイスを使用しながら、業務システムとも連携できるようにしています。
+                そこでOpenDolphinはクリエイティブ型インターフェイスを使用しながら業務システムとも連携できるようにしています。
             </p>
             <img src="./object-model/karte-hi.png" width="680" height="702" alt=""/>
 
@@ -162,14 +162,12 @@
             </ul>
             <p style="padding-left: 1rem;">＊診療行為、医薬品、機材をセットにした診療綴りに相当するデータでORCAの点数マスタから構成される。よく使用するものをテンプレートとして作成し再利用できる。</p>
 
-            <!-- script src="https://gist.github.com/dolphin-dev/3cc1d4579ce268809573.js"></script -->
-
             <h3>連絡先</h3>
             <ul>
             <li>名 称 ライフサイエンスコンピューティング（株）オープンドルフィンラボ </li>
             <li>住 所 231-0023 横浜市中区山下町1番地　シルクビル 825</li>
             <li>電 話 03-5911-1455　FAX 03-5911-1456</li>
-            <!--  li>E-Mail info@digital-globe.co.jp</li -->
+            <li>E-Mail info@digital-globe.co.jp</li>
             </ul>
 
             <h3>事業内容</h3>
@@ -180,7 +178,9 @@
 
             <h3>医療情報処理に関する活動</h3>
             <ul>
-            <li>特定非営利活動法人 MedXMLコンソーシアム　理事</li>
+            <li><a href="http://medxml.sakura.ne.jp">特定非営利活動法人 MedXMLコンソーシアム</a>　理事</li>
+            <li><a href="https://moss.doorkeeper.jp">医療オープンソースソフトウェア協議会</a> メンバー</li>
+            <li><a href="http://openehr.jp">openEHR.jp</a> 実装方針</li>
             </ul>
 
             <h3>アクセス</h3>
