--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
             <h3>GitHub Gist</h3>
             <ul>
+                <li><a href="http://www.atmarkit.co.jp/ait/articles/1508/27/news017.html">OpenDolphin 海を渡る</a>（ITmedia）</li>
                 <li><a href="https://gist.github.com/dolphin-dev/77d867dbf29369bdde79">Simpleは結果である</a></li>
                 <li><a href="https://gist.github.com/dolphin-dev/c0d59774ecfbe47c0b3b">確定日について</a></li>
                 <li><a href="https://gist.github.com/dolphin-dev/c75e4ca63689779bfdf7">ORCAとの接続</a></li>
                 <li><a href="https://gist.github.com/dolphin-dev/6461a80c70946d246a5e">VirtualBoxでテスト</a></li>
                 <li><a href="OpenDolphin-Lab-A4.pdf">オープンソースとの関係</a>（PDF）</li>
-                <li><a href="http://www.slideshare.net/kazushiminagawa/opendolphin?qid=f30b8dea-76dc-48dd-b17e-2283944838af&v=qf1&b=&from_search=1">OpenDolphin 海を渡る</a>（SlideShare）</li>
-            </ul>
+              </ul>
 
             <h3>商用サポート</h3>
             <ul>
