add detail description for the deployment

--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
                 <li>各地でセミナー開催</li>
                 <li>販売代理店様の数 全国に27</li>
             </ul>
-
             <p style="padding-left: 1rem;">詳細については<a href="http://www.lscc.co.jp/product/opendolphinpro.html">ライフサイエンスコンピューティング（株）</a>へお問い合わせください。</p>
 
             <h3>配備対応</h3>
@@ -95,7 +94,7 @@
                 <li>NTTオンデマンド VPN 網とのデータセンター間接続</li>
                 <li>ASP化</li>
             </ul>
-            <p style="padding-left: 1rem;">上記は <a href="http://www.fukushima-doctors.jp/detail/index_2239.html">福島県の健康福祉ネットワーク（通称 キビタン健康ネット）</a>で採用されています。</p>
+            <p style="padding-left: 1rem;">OpenDolphinは地域連携やグループ診療等の基盤へ柔軟に配備できます。上記は福島県の健康福祉ネットワーク（通称 <a href="http://www.fukushima-doctors.jp/detail/index_2239.html">キビタン健康ネット）</a>様の要件に対応したものです。</p>
 
             <h3>YouTube</h3>
             <ul>
