--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <h3>GitHub Gist</h3>
             <ul>
-                <li><a href="http://www.atmarkit.co.jp/ait/articles/1508/27/news017.html">OpenDolphin 海を渡る</a>（ITmedia）</li>
+                <li><a href="http://www.atmarkit.co.jp/ait/articles/1508/27/news017.html">OpenDolphin 海を渡る（ITmedia 記事）</a>　<a href="http://www.slideshare.net/kazushiminagawa/opendolphin?qid=f30b8dea-76dc-48dd-b17e-2283944838af&v=qf1&b=&from_search=1">SlideShare</a></li>
                 <li><a href="https://gist.github.com/dolphin-dev/77d867dbf29369bdde79">Simpleは結果である</a></li>
                 <li><a href="https://gist.github.com/dolphin-dev/c0d59774ecfbe47c0b3b">確定日について</a></li>
                 <li><a href="https://gist.github.com/dolphin-dev/c75e4ca63689779bfdf7">ORCAとの接続</a></li>
