--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <a href="https://github.com/dolphin-dev/OpenDolphin" class="btn">ソースコード</a>
             <a href="https://github.com/dolphin-dev/docker-images" class="btn">インストール</a>
             <a href="https://gist.github.com/dolphin-dev/3cc1d4579ce268809573" class="btn">設　計</a>
+            <!-- Please call pinit.js only once per page -->
+            <script type="text/javascript" async defer  data-pin-lang="ja" data-pin-height="28" data-pin-hover="true" src="//assets.pinterest.com/js/pinit.js"></script>
         </section>
 
         <section class="main-content">
