--- a/about.html
+++ b/about.html
@@ -59,7 +59,9 @@
               <li>横浜市営地下鉄　「関内」　駅より徒歩　１3分</li>
             </ul>
             <h3>受 付</h3>
-              <ul><li>お越しの際は、シルクビル６F   SOHO Yokohama 総合受付へお願いします。</li></ul>
+              <ul>
+                <li>お越しの際は、シルクビル６F   SOHO Yokohama 総合受付へお願いします。</li>
+              </ul>
 
               <!--
             <iframe width="640" height="480" style="frameborder:0; scrolling:no; marginheight:0; marginwidth:0;" src="https://maps.google.co.jp/maps?client=safari&amp;oe=UTF-8&amp;q=%E6%A8%AA%E6%B5%9C%E5%B8%82%E4%B8%AD%E5%8C%BA%E5%B1%B1%E4%B8%8B%E7%94%BA%EF%BC%91%E7%95%AA%E5%9C%B0&amp;ie=UTF8&amp;hq=&amp;hnear=%E7%A5%9E%E5%A5%88%E5%B7%9D%E7%9C%8C%E6%A8%AA%E6%B5%9C%E5%B8%82%E4%B8%AD%E5%8C%BA%E5%B1%B1%E4%B8%8B%E7%94%BA%EF%BC%91&amp;gl=jp&amp;ll=35.447538,139.645256&amp;spn=0.008163,0.011094&amp;t=m&amp;z=14&amp;brcurrent=3,0x60185d1cfcd5e259:0xa4b6be60f768202b,0&amp;output=embed"></iframe><br /><small><a href="https://maps.google.co.jp/maps?client=safari&amp;oe=UTF-8&amp;q=%E6%A8%AA%E6%B5%9C%E5%B8%82%E4%B8%AD%E5%8C%BA%E5%B1%B1%E4%B8%8B%E7%94%BA%EF%BC%91%E7%95%AA%E5%9C%B0&amp;ie=UTF8&amp;hq=&amp;hnear=%E7%A5%9E%E5%A5%88%E5%B7%9D%E7%9C%8C%E6%A8%AA%E6%B5%9C%E5%B8%82%E4%B8%AD%E5%8C%BA%E5%B1%B1%E4%B8%8B%E7%94%BA%EF%BC%91&amp;gl=jp&amp;ll=35.447538,139.645256&amp;spn=0.008163,0.011094&amp;t=m&amp;z=14&amp;brcurrent=3,0x60185d1cfcd5e259:0xa4b6be60f768202b,0&amp;source=embed" style="color:#0000FF;text-align:left">大きな地図で見る</a></small>
