--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
         <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+        <!-- script type="text/javascript" async defer  data-pin-lang="ja" data-pin-height="28" data-pin-hover="true" src="//assets.pinterest.com/js/pinit.js"></script -->
     </head>
     <body>
       <!--
@@ -35,8 +36,6 @@
             <a href="https://github.com/dolphin-dev/OpenDolphin" class="btn">ソースコード</a>
             <a href="https://github.com/dolphin-dev/docker-images" class="btn">インストール</a>
             <a href="https://gist.github.com/dolphin-dev/3cc1d4579ce268809573" class="btn">設　計</a>
-            <!-- Please call pinit.js only once per page -->
-            <script type="text/javascript" async defer  data-pin-lang="ja" data-pin-height="28" data-pin-hover="true" src="//assets.pinterest.com/js/pinit.js"></script>
         </section>
 
         <section class="main-content">
