--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 <li><a href="https://gist.github.com/dolphin-dev/c0d59774ecfbe47c0b3b">確定日について</a></li>
                 <li><a href="https://gist.github.com/dolphin-dev/c75e4ca63689779bfdf7">ORCAとの接続</a></li>
                 <li><a href="https://gist.github.com/dolphin-dev/6461a80c70946d246a5e">VirtualBoxでテスト</a></li>
+                <li><a href="https://gist.github.com/dolphin-dev/d21c88cbfefa86c98049">５分間評価</a></li>
                 <!-- li><a href="OpenDolphin-Lab-A4.pdf">オープンソースとの関係</a>（PDF）</li -->
               </ul>
 
