--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         -->
             <p>OpenDolphinはオープンソースの電子カルテです。Windows、Mac、Linux で動き、日医標準レセプトORCAと連携します。またiPhone/iPad アプリもあります。</p>
 
+            <h3>お知らせ</h3>
+            <p>OpenDolphin パーフェクトガイドが発売されました。お求めは<a href="http://gihyo.jp/book/2016/978-4-7741-8008-3">技術評論社へ</a></p>
+            <img src="./object-model/cover_image.png" width="384" height="539" alt=""/>
+
             <h3>ファクト</h3>
             <ul>
                 <li>札幌市元町皮ふ科 松村先生の先進的拡張　<a href="http://opendolphin.motomachi-hifuka.jp">オープンドルフィン日記</a></li>
