--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 <li>2012年　モダンホスピタルショーに初の単独出展</li>
                 <li>2013年　オルカとクラウド間接続が完成</li>
                 <li>2014年　10周年記念 OpenDolphin クラウド ZERO（従量課金制）リリース</li>
+                <li>2015年　国際化対応</li>
             </ul>
             <p style="padding-left: 1rem;">＊報告書に記載の（株）デジタルグローブは2012年12月31日にライフサイエンスコンピューティング（株）と合併し、同社のオープンドルフィンラボとなりました。</p>
 
