--- a/about.html
+++ b/about.html
@@ -46,22 +46,10 @@
 
             <h3>連絡先</h3>
             <ul>
-              <li>名 称 ライフサイエンスコンピューティング（株）オープンドルフィンラボ </li>
-              <li>住 所 231-0023 横浜市中区山下町1番地　シルクビル 825</li>
+              <li>名 称 ライフサイエンスコンピューティング（株）</li>
+              <li>住 所 171-0022 東京都豊島区南池袋2-30-12 BITビル7F</li>
               <li>電 話 03-5911-1455（本社代表 東京池袋）　FAX 03-5911-1456</li>
-              <li>E-Mail info@digital-globe.co.jp</li>
-            </ul>
-
-            <h3>受 付</h3>
-              <ul>
-                <li>お越しの際は、シルクビル６F   SOHO Yokohama 総合受付へお願いします。</li>
-              </ul>
-
-            <h3>アクセス</h3>
-            <ul>
-              <li>東急みなとみらい線　「日本大通り] 駅　3番出口より徒歩 3分</li>
-              <li>JR根岸線　「関内」　駅より徒歩　１3分</li>
-              <li>横浜市営地下鉄　「関内」　駅より徒歩　１3分</li>
+              <li>E-Mail info@lscc.co.jp</li>
             </ul>
 
               <!--
