--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <h3>連絡先</h3>
             <ul>
               <li>名 称 ライフサイエンスコンピューティング（株）</li>
-              <li>住 所 171-0022 東京都豊島区南池袋2-30-12 BITビル7F</li>
+              <li>住 所 170-0013 東京都豊島区東池袋 4-39-11 サニービル池袋6F</li>
               <li>電 話 03-5911-1455（本社代表　東京池袋）　FAX 03-5911-1456</li>
               <li>E-Mail info@lscc.co.jp</li>
             </ul>
